Checkbox label spacing issue fixed

--- a/front-end/Assets/src/css/modules/_forms-redesign.scss
+++ b/front-end/Assets/src/css/modules/_forms-redesign.scss
@@ -380,7 +380,7 @@
 	
 	@media (min-width: $break-lg) {
 		.product-category-header.product-category-header2 .bannerContent .layout-inner-wrap .flex-item {
-			margin-left: 30px;
+			margin-left: 3rem;
 		}
 	}
 	@media (min-width: $break-md) {
